# OP1-Clone

./: .gitignore  CMakeLists.txt  CRASH_FIXES.md  DEV_DIGEST_SAMPLE_LOADING_CRASH.md  EMBEDDED_PORTING_NOTES.md  PROJECT_RULES.md  README.md  SIGNALSMITH_INTEGRATION.md  TIME_STRETCHING_IMPLEMENTATION.md  verify_core_purity.sh
.cursor/rules/jucewraponly/: RULE.md
.cursor/rules/openstandalone/: RULE.md
.cursor/rules/smallfiles/: RULE.md
Source/Core/: AudioBufferView.h  BiquadFilter.cpp  BiquadFilter.h  CORE_RULES.md  CircularBuffer.cpp  CircularBuffer.h  DriveEffect.cpp  DriveEffect.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  GranularTimeWarp.cpp  GranularTimeWarp.h  ITimePitch.h  IVisualizationRenderer.h  LinearSmoother.h  LockFreeMidiQueue.cpp  LockFreeMidiQueue.h  LofiEffect.cpp  LofiEffect.h  MidiEvent.h  MoogLadderFilter.cpp  MoogLadderFilter.h  PitchShiftTSM.cpp  PitchShiftTSM.h  PopDetector.h  Resampler.cpp  Resampler.h  RingBufferF.cpp  RingBufferF.h  STFT.cpp  STFT.h  SampleData.h  SamplerEngine.cpp  SamplerEngine.h  SamplerVoice.cpp  SamplerVoice.h  SignalsmithTimePitch.cpp  SignalsmithTimePitch.h  SimpleFFT.cpp  SimpleFFT.h  (+15 more)
Source/Core/DSP/: AmpEnvelope.cpp  AmpEnvelope.h  AmpEnvelopeADSR.cpp  AmpEnvelopeADSR.h  AudioRingBuffer.h  IWarpProcessor.h  OrbitBlender.cpp  OrbitBlender.h  SignalsmithStretchWrapper.cpp  SignalsmithStretchWrapper.h
Source/Core/Debug/: AmpEnvelopeTest.cpp  AmpEnvelopeTest.h
Source/JuceWrapper/: ADSRPillComponent.cpp  ADSRPillComponent.h  ADSRVisualizationComponent.cpp  ADSRVisualizationComponent.h  EditorEventHandlers.cpp  EditorEventHandlers.h  EditorLayoutManager.cpp  EditorLayoutManager.h  EditorTimerCallback.cpp  EditorTimerCallback.h  EditorUpdateMethods.cpp  EditorUpdateMethods.h  EncoderComponent.cpp  EncoderComponent.h  EncoderSetupManager.cpp  EncoderSetupManager.h  InstrumentMenuComponent.cpp  InstrumentMenuComponent.h  JuceEngineAdapter.cpp  JuceEngineAdapter.h  JuceVisualizationRenderer.cpp  JuceVisualizationRenderer.h  KeyboardButton.cpp  KeyboardButton.h  MidiInputHandler.cpp  MidiInputHandler.h  MidiStatusComponent.cpp  MidiStatusComponent.h  OrbitIconButton.cpp  OrbitIconButton.h  OrbitVisualizationComponent.cpp  OrbitVisualizationComponent.h  PianoIconButton.cpp  PianoIconButton.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleSlotComponent.cpp  SampleSlotComponent.h  (+5 more)
